--- a/assets/styles/utils/functions.scss
+++ b/assets/styles/utils/functions.scss
@@ -7,3 +7,12 @@
     @return null;
   }
 }
+
+// Mixin Viewport Width
+@function vw($width) {
+  @return 100 * math.div($width, 1380) * 1vw;
+}
+
+@function vwM($width) {
+  @return 100 * math.div($width, 420) * 1vw;
+}
