--- a/assets/styles/utils/variables.scss
+++ b/assets/styles/utils/variables.scss
@@ -1,6 +1,7 @@
-$color-light-gray: #37384c;
-$color-light-blue: #b2b8c3;
+$color-very-light: #efefef;
+$color-light: #ececec;
+$color-dark: #383939;
 
-$font-george-x: "George X";
+$font-george-x: 'George X';
 
-$z-indexes: ("navigation", "content");
+$z-indexes: ('navigation', 'content');
