--- a/assets/styles/base/base.scss
+++ b/assets/styles/base/base.scss
@@ -6,15 +6,14 @@
 
 html {
   @extend %cover;
-  // font-size: calc(100vw / 1920 * 10);
 }
 
 body {
   @extend %cover;
-  background: $color-light-gray;
-  color: $color-light-blue;
+  background: $color-light;
+  color: $color-dark;
 
-  font-family: "Helvetica";
+  font-family: 'Helvetica';
 }
 
 a {
