add project page

--- a/assets/styles/base/fonts.scss
+++ b/assets/styles/base/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
-  font-family: $font-george-x;
-  src: url('~assets/fonts/george-x-regular.woff2') format('woff2'),
-    url('~assets/fonts/george-x-regular.woff') format('woff');
+  font-family: $font-soleil;
+  src: url('~assets/fonts/soleil-regular.woff2') format('woff2'),
+    url('~assets/fonts/soleil-regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
