--- a/assets/styles/utils/variables.scss
+++ b/assets/styles/utils/variables.scss
@@ -3,5 +3,6 @@ $color-light: #ececec;
 $color-dark: #383939;
 
 $font-george-x: 'George X';
+$font-soleil: 'soleil';
 
 $z-indexes: ('navigation', 'content');
