--- a/assets/styles/utils/variables.scss
+++ b/assets/styles/utils/variables.scss
@@ -4,5 +4,6 @@ $color-dark: #383939;
 
 $font-george-x: 'George X';
 $font-soleil: 'soleil';
+$font-soleil-bold: 'soleil-bold';
 
 $z-indexes: ('navigation', 'content');
