--- a/assets/styles/base/fonts.scss
+++ b/assets/styles/base/fonts.scss
@@ -6,3 +6,11 @@
   font-style: normal;
   font-display: swap;
 }
+@font-face {
+  font-family: $font-soleil-bold;
+  src: url('~assets/fonts/soleil-bold.woff2') format('woff2'),
+    url('~assets/fonts/soleil-bold.woff') format('woff');
+  font-weight: normal;
+  font-style: bold;
+  font-display: swap;
+}
