save scroll anim

--- a/assets/styles/utils/variables.scss
+++ b/assets/styles/utils/variables.scss
@@ -6,4 +6,4 @@ $font-george-x: 'George X';
 $font-soleil: 'soleil';
 $font-soleil-bold: 'soleil-bold';
 
-$z-indexes: ('navigation', 'footer', 'scroll');
+$z-indexes: ('navigation', 'footer', 'scrollbar', 'scroll');
