add slider mobile about + transitions mobile + content about

--- a/assets/styles/base/base.scss
+++ b/assets/styles/base/base.scss
@@ -10,7 +10,7 @@ html {
 
 body {
   @extend %cover;
-  background: $color-light;
+  background: #e2e2e2;
   color: $color-dark;
 
   font-family: $font-soleil;
