--- a/assets/styles/utils/variables.scss
+++ b/assets/styles/utils/variables.scss
@@ -7,6 +7,7 @@ $font-soleil: 'soleil';
 $font-soleil-bold: 'soleil-bold';
 
 $z-indexes: (
+  'rotate',
   'projectBarre',
   'navigation',
   'footer',
