--- a/assets/styles/base/base.scss
+++ b/assets/styles/base/base.scss
@@ -13,7 +13,9 @@ body {
   background: #e2e2e2;
   color: $color-dark;
 
-  font-family: $font-soleil;
+  font-family: soleil, sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 a {
